syntax = "proto3";

package grpc_study.math;

import "mathv2/proto/mathv2.proto";

option go_package = "github.com/worryFree56/grpc_study/src/mathv3/types";

message ReqMathv3 {

    string a = 1 ;
    string b = 2 ;
    repeated Operation oper = 3 ;
}

message ResMathv3 {
    int64 code = 1;
    repeated Res result = 2;
}

message Res {
    string type  = 1;
    string value = 2;
}

service MathV3 {
    rpc Operation (ReqMathv3) returns (ResMathv3);
}

// protoc \
//     -I=third_party \
//     -I=src  \
//     --go_out=plugins=grpc:. \
//     ./src/mathv3/proto/mathv3.proto


// mv github.com/worryFree56/grpc_study/src/mathv3/types/* src/mathv3/types/
